@@ -1,4 +1,6 @@
 Verion 0.9.45dev (?? ??? 2004)
+  - Cleaned up user-ldap.php: added connect_and_bind function, config
+    section cleanup, check all searches for attr array, etc.
   - Made search js load even when groups aren't enabled.
   - Fixed permissions so read-only cannot add/edit/delete anything
   - Added patch 1081875: added parseInt calls in js/popups.js
